<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="shoprite_schedule_viewer.android_projects.emad.com.SRScheduleViewer.PayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/title_this_week"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTotalHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_total_hours"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTotalHoursValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrossPay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_gross_pay"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewGrossPayValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </TableRow>

            </TableLayout>

            <!--NDayWeek-->
            <TableLayout
                android:id="@+id/tableLayoutNextWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/title_next_week"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewTotalHours2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_total_hours"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTotalHoursValue2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrossPay2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_gross_pay"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewGrossPayValue2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textSize="18sp"
                        android:textStyle="italic" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:menu="@menu/navigation" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
